Fix all required